SIMPLEX-60 Refactor: Generics fixes and sonarqube.